Fixed for Attila

--- a/EsfCharacterControl/app.config
+++ b/EsfCharacterControl/app.config
@@ -31,9 +31,6 @@
             <setting name="gamePath" serializeAs="String">
                 <value />
             </setting>
-            <setting name="character_class_path" serializeAs="String">
-                <value>10</value>
-            </setting>
         </EsfSaveEditorControls.ATW>
         <EsfSaveEditorControls.R2TW>
             <setting name="dataPacks" serializeAs="Xml">
@@ -56,9 +53,6 @@
             <setting name="gamePath" serializeAs="String">
                 <value />
             </setting>
-            <setting name="character_class_path" serializeAs="String">
-                <value>9</value>
-            </setting>
         </EsfSaveEditorControls.R2TW>
     </userSettings>
     <applicationSettings>
@@ -69,6 +63,38 @@
             <setting name="gameName" serializeAs="String">
                 <value>Total War: Rome 2</value>
             </setting>
+            <setting name="character_class_path" serializeAs="String">
+                <value>9</value>
+            </setting>
+            <setting name="character_filter" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>general</string>
+                        <string>spy</string>
+                        <string>champion</string>
+                        <string>dignitary</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="character_gender" serializeAs="String">
+                <value>6</value>
+            </setting>
+            <setting name="army_class" serializeAs="String">
+                <value>MILITARY_FORCE_LEGACY\0</value>
+            </setting>
+            <setting name="army_filter" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>army</string>
+                        <string>navy</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="army_index" serializeAs="String">
+                <value>MILITARY_FORCE_LEGACY\2</value>
+            </setting>
         </EsfSaveEditorControls.R2TW>
         <EsfSaveEditorControls.ATW>
             <setting name="exe" serializeAs="String">
@@ -76,6 +102,39 @@
             </setting>
             <setting name="gameName" serializeAs="String">
                 <value>Total War: Attila</value>
+            </setting>
+            <setting name="character_class_path" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="character_filter" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>general</string>
+                        <string>wife</string>
+                        <string>spy</string>
+                        <string>champion</string>
+                        <string>priest</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="character_gender" serializeAs="String">
+                <value>7</value>
+            </setting>
+            <setting name="army_class" serializeAs="String">
+                <value>MILITARY_FORCE_LEGACY\1</value>
+            </setting>
+            <setting name="army_filter" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>army</string>
+                        <string>navy</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="army_index" serializeAs="String">
+                <value>MILITARY_FORCE_LEGACY\3</value>
             </setting>
         </EsfSaveEditorControls.ATW>
     </applicationSettings>
