--- a/EsfCharacterControl/R2TW.settings
+++ b/EsfCharacterControl/R2TW.settings
@@ -24,8 +24,33 @@
     <Setting Name="gamePath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="character_class_path" Type="System.Int32" Scope="User">
+    <Setting Name="character_class_path" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">9</Value>
+    </Setting>
+    <Setting Name="character_filter" Type="System.Collections.Specialized.StringCollection" Scope="Application">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;string&gt;general&lt;/string&gt;
+  &lt;string&gt;spy&lt;/string&gt;
+  &lt;string&gt;champion&lt;/string&gt;
+  &lt;string&gt;dignitary&lt;/string&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
+    <Setting Name="character_gender" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">6</Value>
+    </Setting>
+    <Setting Name="army_class" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">MILITARY_FORCE_LEGACY\0</Value>
+    </Setting>
+    <Setting Name="army_filter" Type="System.Collections.Specialized.StringCollection" Scope="Application">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;string&gt;army&lt;/string&gt;
+  &lt;string&gt;navy&lt;/string&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
+    <Setting Name="army_index" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">MILITARY_FORCE_LEGACY\2</Value>
     </Setting>
   </Settings>
 </SettingsFile>
