ready to publish 0.5

--- a/EsfCharacterControl/app.config
+++ b/EsfCharacterControl/app.config
@@ -31,6 +31,9 @@
             <setting name="gamePath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="save_path" serializeAs="String">
+                <value>The Creative Assembly\Attila\save_games</value>
+            </setting>
         </EsfSaveEditorControls.ATW>
         <EsfSaveEditorControls.R2TW>
             <setting name="dataPacks" serializeAs="Xml">
@@ -52,6 +55,9 @@
             </setting>
             <setting name="gamePath" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="save_path" serializeAs="String">
+                <value>The Creative Assembly\Rome2\save_games</value>
             </setting>
         </EsfSaveEditorControls.R2TW>
     </userSettings>
