--- a/EsfCharacterControl/R2TW.settings
+++ b/EsfCharacterControl/R2TW.settings
@@ -52,5 +52,8 @@
     <Setting Name="army_index" Type="System.String" Scope="Application">
       <Value Profile="(Default)">MILITARY_FORCE_LEGACY\2</Value>
     </Setting>
+    <Setting Name="save_path" Type="System.String" Scope="User">
+      <Value Profile="(Default)">The Creative Assembly\Rome2\save_games</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
